--- a/themes/wilks/layouts/partials/about-sidebar.html
+++ b/themes/wilks/layouts/partials/about-sidebar.html
@@ -1,4 +1,4 @@
-<div class="typography">
+<section class="typography">
   <h2>Skillset</h2>
   <ul>
     <li>HTML5
@@ -29,4 +29,4 @@
     <li>PHP</li>
     <li>Docker &amp; Docker Compose</li>
   </ul>
-</div>
+</section>
