--- a/themes/wilks/static/css/main.css
+++ b/themes/wilks/static/css/main.css
@@ -1,10 +1,60 @@
 .button {
   display: inline-block;
   padding: 1.5rem 2rem;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: #FFF;
   border-radius: 0.5rem;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
   text-decoration: none;
   font-size: 2rem;
+  color: var(--color-text);
+}
+
+@media only screen and (max-width: 40.625em) {
+  .button {
+    font-size: 1.6rem;
+  }
+}
+
+:root {
+  --font-family: "Quicksand", sans-serif;
+  --font-size-largest: 6rem;
+  --font-size-logo: 6rem;
+  --font-size-section: 4rem;
+  --font-size-intro: 3.5rem;
+  --color-text: #1C1C1C;
+  --color-contrast-primary: #000;
+  --color-contrast-secondary: #FFF;
+  --color-primary: #d8033f;
+  --theme-default: #ffeb6b;
+  --theme-article: #cbfabe;
+  --theme-work: #be9bdf7a;
+  --gutter-left: 35rem;
+  --frame: 7.5rem;
+  --section-gap: 7.5rem;
+}
+
+@media only screen and (max-width: 75em) {
+  :root {
+    --gutter-left: 20rem;
+    --frame: 5rem;
+    --section-gap: 5rem;
+    --font-size-largest: 4rem;
+    --font-size-logo: 4rem;
+    --font-size-intro: 3.2rem;
+  }
+}
+
+@media only screen and (max-width: 40.625em) {
+  :root {
+    --gutter-left: 11rem;
+    --frame: 2rem;
+    --section-gap: 2rem;
+    --font-size-largest: 2rem;
+    --font-size-logo: 3rem;
+    --font-size-intro: 1.8rem;
+    --font-size-section: 2rem;
+  }
 }
 
 * {
@@ -28,9 +78,10 @@ html {
 }
 
 body {
-  font-family: "Quicksand", sans-serif;
+  font-family: var(--font-family);
+  font-display: swap;
   font-size: 1.6rem;
-  color: rgba(28, 28, 28, 0.8);
+  color: var(--color-text);
   position: relative;
   background-position: left;
   background-repeat: repeat;
@@ -44,13 +95,6 @@ body {
 h1 {
   font-weight: 800;
   font-size: 5rem;
-  color: rgba(28, 28, 28, 0.8);
-}
-
-@media only screen and (max-width: 40.625em) {
-  h1 {
-    font-size: 2rem;
-  }
 }
 
 h2 {
@@ -86,7 +130,6 @@ em {
 }
 
 .typography > p:first-of-type {
-  font-size: 2.4rem;
   font-weight: 600;
 }
 
@@ -123,7 +166,7 @@ em {
 }
 
 a {
-  color: rgba(28, 28, 28, 0.8);
+  color: var(--color-text);
   font-weight: 700;
 }
 
@@ -159,19 +202,19 @@ th {
 }
 
 .site-header {
-  width: 100%;
-  max-width: 30rem;
-  padding: 5rem;
+  padding: var(--frame);
   position: relative;
   z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
-  background-color: #fae079;
+  background-color: #FFF;
   background-position: bottom center;
   background-size: 100%;
   background-repeat: no-repeat;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+  border-bottom-right-radius: 0.5rem;
 }
 
 .site-header * {
@@ -180,18 +223,31 @@ th {
 }
 
 .banner {
-  margin: -5rem -10rem 0;
-  padding: 5rem 10rem;
-  background-color: #ef3308;
   position: relative;
-  border-bottom: 1rem solid rgba(0, 0, 0, 0.025);
-  margin-bottom: 5rem;
+  margin-bottom: var(--section-gap);
   -webkit-transition: 0.2s ease-in-out background-color;
   transition: 0.2s ease-in-out background-color;
+  padding: 10rem 10rem 10rem var(--gutter-left);
+  background-color: var(--theme-default);
+  border-radius: 0.5rem;
+}
+
+@media only screen and (max-width: 40.625em) {
+  .banner {
+    padding: 5rem 3rem 5rem var(--gutter-left);
+  }
+}
+
+.theme-articles .banner {
+  background-color: var(--theme-article);
+}
+
+.theme-work .banner {
+  background-color: var(--theme-work);
 }
 
 .banner * {
-  color: #fae079;
+  color: var(--color-text);
   position: relative;
 }
 
@@ -199,13 +255,31 @@ th {
   margin-top: 5rem;
 }
 
+@media only screen and (max-width: 40.625em) {
+  .banner * + * {
+    margin-top: 2.5rem;
+  }
+}
+
 .banner__title {
-  font-size: 5rem;
+  font-size: var(--font-size-largest);
   font-weight: 700;
+  line-height: 1;
+}
+
+.banner__title span {
+  text-decoration: line-through;
+  opacity: 0.25;
+}
+
+@media only screen and (max-width: 50em) {
+  .banner__title {
+    line-height: 1.2;
+  }
 }
 
 .banner__intro {
-  font-size: 3rem;
+  font-size: var(--font-size-intro);
   font-weight: 500;
   line-height: 1.2;
 }
@@ -215,27 +289,46 @@ th {
   max-width: 90rem;
 }
 
-.banner--front {
-  padding: 5rem 10rem 10rem;
+.banner__date {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  text-align: center;
+  padding: 0 2rem;
+  background-color: rgba(0, 0, 0, 0.1);
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-top: 0;
+  line-height: 1.2;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  display: none;
+}
+
+.banner__date * {
+  margin-top: 0;
+}
+
+@media only screen and (max-width: 40.625em) {
+  .banner--front {
+    padding: 5rem 3rem 5rem var(--gutter-left);
+  }
 }
 
 .banner--front .banner__title,
 .banner--front .banner__intro {
-  max-width: 65rem;
-}
-
-.banner--front:before {
-  content: "";
-  background-image: url("../images/wiggles.svg");
-  background-position: center right;
-  background-repeat: no-repeat;
-  background-size: contain;
-  width: 100%;
-  top: -5rem;
-  bottom: -7.5rem;
-  position: absolute;
-  right: 10rem;
-  opacity: 0.05;
+  max-width: 80rem;
 }
 
 .site-nav {
@@ -252,83 +345,62 @@ th {
   font-size: 2.5rem;
   font-weight: 700;
   text-decoration: none;
-  color: #ef3308;
+  color: #d8033f;
   -webkit-transition: border-color ease-in-out 0.2s;
   transition: border-color ease-in-out 0.2s;
   padding-bottom: 1rem;
   -webkit-transition: 0.2s ease-in-out color;
   transition: 0.2s ease-in-out color;
+  text-transform: lowercase;
+}
+
+@media only screen and (max-width: 40.625em) {
+  .site-nav__link {
+    font-size: 1.8rem;
+    padding-bottom: 0;
+  }
 }
 
 .logo {
-  background-image: url("../images/logo-round-2.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 4.5rem;
-  height: 3.3rem;
-  background-size: 4.5rem auto;
-  display: block;
-  margin-right: 10rem;
-  text-indent: -9999em;
-  -webkit-transition: all ease-in-out 0.2s;
-  transition: all ease-in-out 0.2s;
-  border-radius: 0.25rem;
-}
-
-.logo:hover, .logo:focus {
-  -webkit-box-shadow: 0 0 0 transparent;
-          box-shadow: 0 0 0 transparent;
-}
-
-.logo-alt {
-  font-size: 5rem;
+  font-size: var(--font-size-logo);
   font-weight: bold;
   margin-bottom: 10rem;
   text-decoration: none;
-  letter-spacing: -0.1rem;
-  color: #ef3308;
+  letter-spacing: -0.25rem;
+  color: #d8033f;
   -webkit-transition: 0.2s ease-in-out color;
   transition: 0.2s ease-in-out color;
+  text-transform: lowercase;
 }
 
-.site-container {
-  min-height: 100%;
-  position: relative;
-  background-color: #fdf1c3;
-  margin-left: 30rem;
-  padding-top: 5rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
-  min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+@media only screen and (max-width: 40.625em) {
+  .logo {
+    margin-bottom: 5rem;
+  }
 }
 
-footer {
+.footer {
   font-size: 1.4rem;
+  background-color: #373e4c;
+  padding: 2rem var(--frame);
   color: #FFF;
-  padding: 5rem 10rem;
-  margin-top: auto;
 }
 
-footer a {
+.footer a {
   color: inherit;
   text-decoration: none;
 }
 
-section.latest {
-  padding: 5rem 0 10rem;
+main {
+  min-height: 100%;
+  position: relative;
+  padding: var(--frame);
 }
 
 code {
   display: inline-block;
   padding: 0 0.5rem;
-  background-color: #fae079;
+  background-color: #ffeb6b;
   border-radius: 0.5rem;
   font-weight: 700;
 }
@@ -351,8 +423,13 @@ code {
   border-radius: 0.5rem;
 }
 
+.content {
+  padding-left: var(--gutter-left);
+  padding-bottom: var(--section-gap);
+}
+
 .content__main {
-  max-width: 90rem;
+  max-width: 80rem;
 }
 
 .content--with-sidebar {
@@ -370,78 +447,174 @@ code {
       -ms-flex: 1;
           flex: 1;
   background-color: rgba(28, 28, 28, 0.05);
+  background-color: #FFF;
+  border-radius: 0.5rem;
   padding: 5rem;
-  margin-left: 10rem;
-  margin-top: -5rem;
-  margin-right: -10rem;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+  max-width: 80rem;
 }
 
 .content__sidebar * {
-  color: rgba(28, 28, 28, 0.8);
+  color: var(--color-text);
 }
 
 .post-list {
   list-style: none;
-}
-
-.post-list__item {
-  width: 100%;
-  margin-bottom: 3rem;
-  display: block;
-}
-
-.latest {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin: 0 -2rem;
 }
 
-.latest__col {
-  width: 50%;
+@media only screen and (max-width: 40.625em) {
+  .post-list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    margin: 0 -1rem;
+  }
 }
 
-.latest__heading {
+.post-list__item {
+  width: 33.333%;
+  padding: 2rem;
+  display: block;
+  position: relative;
+}
+
+@media only screen and (max-width: 75em) {
+  .post-list__item {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 40.625em) {
+  .post-list__item {
+    width: 100%;
+    padding: 1rem;
+  }
+}
+
+.section {
+  padding: 10rem 10rem 10rem var(--gutter-left);
+  background-color: var(--theme-default);
+  border-radius: 0.5rem;
+}
+
+@media only screen and (max-width: 40.625em) {
+  .section {
+    padding: 5rem 3rem 5rem var(--gutter-left);
+  }
+}
+
+.section:not(:last-child) {
+  margin-bottom: var(--section-gap);
+}
+
+.section--articles {
+  background-color: var(--theme-article);
+}
+
+.section--work {
+  background-color: var(--theme-work);
+}
+
+.section__heading {
   margin-top: 0;
-  margin-bottom: 5rem;
-  font-size: 3rem;
+  margin-bottom: 3rem;
+  font-size: var(--font-size-section);
   font-weight: bold;
 }
 
-.latest__heading a {
+.section__heading a {
   border-radius: 0.5rem;
   padding: 0.5rem 1rem;
   display: inline-block;
   vertical-align: middle;
   text-decoration: none;
-  color: rgba(28, 28, 28, 0.8);
-  background-color: #fae079;
+  color: var(--color-text);
+  background-color: #FFF;
   font-size: 1.4rem;
   font-weight: 700;
   margin-left: 0.5rem;
 }
 
+.section__intro {
+  font-size: var(--font-size-intro);
+  font-weight: 500;
+  line-height: 1.2;
+  margin-bottom: 3rem;
+  max-width: 80rem;
+}
+
 .teaser {
   position: relative;
+  display: block;
+  background-color: rgba(0, 0, 0, 0.05);
+  height: 100%;
+  border-radius: 0.5rem;
   text-decoration: none;
-  width: 100%;
+  -webkit-transition: ease-in-out all 0.2s;
+  transition: ease-in-out all 0.2s;
+}
+
+.teaser:hover, .teaser:focus {
+  background-color: #ffeb6b;
+}
+
+.teaser__content {
   text-align: left;
+  background-color: #FFF;
+  border-radius: 0.5rem;
+  padding: 4rem;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+          box-shadow: 0 1px 2px rgba(0, 0, 0, 0.02), 0 2px 4px rgba(0, 0, 0, 0.02), 0 4px 8px rgba(0, 0, 0, 0.02), 0 8px 16px rgba(0, 0, 0, 0.02), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: ease-in-out all 0.2s;
+  transition: ease-in-out all 0.2s;
+}
+
+@media only screen and (max-width: 40.625em) {
+  .teaser__content {
+    padding: 2rem;
+  }
 }
 
 .teaser__title {
   font-size: 2.2rem;
+  line-height: 1.2;
   margin-top: 0;
   margin-bottom: 1rem;
   -webkit-transition: color ease-in-out 0.2s;
   transition: color ease-in-out 0.2s;
   text-align: left;
-  color: #ef3308;
+  color: #d8033f;
+  font-weight: 700;
 }
 
-.read-time {
+@media only screen and (max-width: 40.625em) {
+  .teaser__title {
+    font-size: 1.8rem;
+  }
+}
+
+.teaser__footer {
   margin-top: auto;
   font-size: 1.5rem;
-  font-weight: 500;
-  color: rgba(28, 28, 28, 0.8);
+  line-height: 1.4;
+  font-weight: 600;
+  color: var(--color-text);
 }
 
 .tags {
@@ -459,7 +632,7 @@ code {
 .tags__item {
   margin-left: 1rem;
   padding: 0.8rem 1rem 0.8rem;
-  color: rgba(28, 28, 28, 0.8);
+  color: var(--color-text);
   background-color: #FFF;
   font-size: 1.2rem;
   font-weight: 700;
@@ -477,27 +650,7 @@ code {
 .pager {
   font-size: 1.2rem;
   font-weight: 800;
-  color: rgba(28, 28, 28, 0.8);
+  color: var(--color-text);
   text-align: left;
   margin-top: 2rem;
-}
-
-.theme-articles .banner {
-  background-color: #49356d;
-}
-
-.theme-articles .logo-alt,
-.theme-articles .site-nav__link,
-.theme-articles .teaser__title {
-  color: #49356d;
-}
-
-.theme-work .banner {
-  background-color: #151f62;
-}
-
-.theme-work .logo-alt,
-.theme-work .site-nav__link,
-.theme-work .teaser__title {
-  color: #151f62;
 }
