--- a/themes/wilks/static/css/src/base/_util.scss
+++ b/themes/wilks/static/css/src/base/_util.scss
@@ -1,8 +1,14 @@
 .button {
   display: inline-block;
   padding: 1.5rem 2rem;
-  background-color: rgba(0, 0, 0, 0.05);
+  background-color: $color-light;
   border-radius: 0.5rem;
+  box-shadow: $box-shadow;
   text-decoration: none;
   font-size: 2rem;
+  color: var(--color-text);
+
+  @media #{$breakpoint-small-x} {
+    font-size: 1.6rem;
+  }
 }
