--- a/themes/wilks/static/css/src/includes/_header.scss
+++ b/themes/wilks/static/css/src/includes/_header.scss
@@ -1,17 +1,16 @@
 .site-header {
-  width: 100%;
-  max-width: 30rem;
-  padding: 5rem;
+  padding: var(--frame);
   position: relative;
   z-index: 1;
   position: fixed;
   top: 0;
   left: 0;
-  bottom: 0;
-  background-color: $color-primary-default;
+  background-color: $color-light;
   background-position: bottom center;
   background-size: 100%;
   background-repeat: no-repeat;
+  box-shadow: $box-shadow;
+  border-bottom-right-radius: 0.5rem;
 
   * {
     position: relative;
@@ -20,32 +19,56 @@
 }
 
 .banner {
-  margin: -5rem -10rem 0;
-  padding: 5rem 10rem;
-  background-color: $color-secondary-default;
   position: relative;
-  border-bottom: 1rem solid rgba(0,0,0,0.025);
-  margin-bottom: 5rem;
+  margin-bottom: var(--section-gap);
   transition: 0.2s ease-in-out background-color;
-  
+  padding: 10rem 10rem 10rem var(--gutter-left);
+  background-color: var(--theme-default);
+  border-radius: 0.5rem;
+
+  @media #{$breakpoint-small-x} {
+    padding: 5rem 3rem 5rem var(--gutter-left);
+  }
+
+  .theme-articles & {
+    background-color: var(--theme-article);
+  }
+
+  .theme-work & {
+    background-color: var(--theme-work);
+  }
 
   * {
-    color: $color-primary-default;
+    color: var(--color-text);
     position: relative;
   }
 
   * + * {
     margin-top: 5rem;
+
+    @media #{$breakpoint-small-x} {
+      margin-top: 2.5rem;
+    }
   }
 }
 
 .banner__title {
-  font-size: 5rem;
+  font-size: var(--font-size-largest);
   font-weight: $font-weight-bold;
+  line-height: 1;
+
+  span {
+    text-decoration: line-through;
+    opacity: 0.25;
+  }
+
+  @media #{$breakpoint-medium} {
+    line-height: 1.2;
+  }
 }
 
 .banner__intro {
-  font-size: 3rem;
+  font-size: var(--font-size-intro);
   font-weight: 500;
   line-height: 1.2;
 }
@@ -55,26 +78,37 @@
   max-width: 90rem;
 }
 
-.banner--front {
-  padding: 5rem 10rem 10rem;
+.banner__date {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  padding: 0 2rem;
+  background-color: rgba(0,0,0,.1);
+  font-size: 2.5rem;
+  font-weight: bold;
+  margin-top: 0;
+  line-height: 1.2;
+  border-top-right-radius: 0.5rem;
+  border-bottom-right-radius: 0.5rem;
+  display: none;
 
+  * {
+    margin-top: 0;
+  }
+}
+
+.banner--front {
+  @media #{$breakpoint-small-x} {
+    padding: 5rem 3rem 5rem var(--gutter-left);
+  }
   .banner__title,
   .banner__intro {
-    max-width: 65rem;
-  }
-
-  &:before {
-    content: "";
-    background-image: url("../images/wiggles.svg");
-    background-position: center right;
-    background-repeat: no-repeat;
-    background-size: contain;
-    width: 100%;
-    top: -5rem;
-    bottom: -7.5rem;
-    position: absolute;
-    right: 10rem;
-    opacity: 0.05;
+    max-width: 80rem;
   }
 }
 
@@ -87,38 +121,29 @@
   font-size: 2.5rem;
   font-weight: $font-weight-bold;
   text-decoration: none;
-  color: $color-secondary-default;
+  color: $color-primary-default;
   transition: border-color ease-in-out 0.2s;
   padding-bottom: 1rem;
   transition: 0.2s ease-in-out color;
-}
+  text-transform: lowercase;
 
-.logo {
-  background-image: url("../images/logo-round-2.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  width: 4.5rem;
-  height: 3.3rem;
-  background-size: 4.5rem auto;
-  display: block;
-  //box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-  margin-right: 10rem;
-  text-indent: -9999em;
-  transition: all ease-in-out 0.2s;
-  border-radius: 0.25rem;
-
-  &:hover,
-  &:focus {
-    box-shadow: 0 0 0 transparent;
+  @media #{$breakpoint-small-x} {
+    font-size: 1.8rem;
+    padding-bottom: 0;
   }
 }
 
-.logo-alt {
-  font-size: 5rem;
+.logo {
+  font-size: var(--font-size-logo);
   font-weight: bold;
   margin-bottom: 10rem;
   text-decoration: none;
-  letter-spacing: -0.1rem;
-  color: $color-secondary-default;
+  letter-spacing: -0.25rem;
+  color: $color-primary-default;
   transition: 0.2s ease-in-out color;
+  text-transform: lowercase;
+
+  @media #{$breakpoint-small-x} {
+    margin-bottom: 5rem;
+  }
 }
