--- a/themes/wilks/static/css/src/layout/_site.scss
+++ b/themes/wilks/static/css/src/layout/_site.scss
@@ -1,39 +1,13 @@
-.site-container {
+main {
   min-height: 100%;
   position: relative;
-  background-color: lighten($color-primary-default, 15%);
-  margin-left: 30rem;
-  padding-top: 5rem;
-  padding-left: 10rem;
-  padding-right: 10rem;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
-}
-
-footer {
-  font-size: 1.4rem;
-  color: $color-light;
-  padding: 5rem 10rem;
-  margin-top: auto;
-}
-
-footer a {
-  color: inherit;
-  text-decoration: none;
-}
-
-section {
-
-  &.latest {
-    padding: 5rem 0 10rem;
-  }
+  padding: var(--frame);
 }
 
 code {
   display: inline-block;
   padding: 0 0.5rem;
-  background-color: $color-primary-default;
+  background-color: $color-secondary-default;
   border-radius: 0.5rem;
   font-weight: $font-weight-bold;
 }
@@ -59,11 +33,12 @@ code {
 }
 
 .content {
-
+  padding-left: var(--gutter-left);
+  padding-bottom: var(--section-gap);
 }
 
 .content__main {
-  max-width: 90rem;
+  max-width: 80rem;
 }
 
 .content--with-sidebar {
@@ -77,12 +52,13 @@ code {
 .content__sidebar {
   flex: 1;
   background-color: rgba(#1c1c1c, 0.05);
+  background-color: $color-light;
+  border-radius: 0.5rem;
   padding: 5rem;
-  margin-left: 10rem;
-  margin-top: -5rem;
-  margin-right: -10rem;
+  box-shadow: $box-shadow;
+  max-width: 80rem;
 
   * {
-    color: $color-dark;
+    color: var(--color-text);
   }
 }
