Add animations to templates

--- a/themes/wilks/layouts/_default/baseof.html
+++ b/themes/wilks/layouts/_default/baseof.html
@@ -26,20 +26,6 @@
 			{{ block "main" . }}{{ end }}
 		</main>
 		{{ partial "footer" . }}
-		<script type="text/javascript">
-			WebFontConfig = {
-				google: {
-					families: ['Quicksand:300,400,500,600,700,800&display=swap']
-				}
-			};
-			(function () {
-				var wf = document.createElement('script');
-				wf.src = 'https://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-				wf.type = 'text/javascript';
-				wf.async = 'true';
-				var s = document.getElementsByTagName('script')[0];
-				s.parentNode.insertBefore(wf, s);
-			})();
-		</script>
+		<script src="{{ "scripts/main.js" | relURL }}" type="text/javascript"></script>
 	</body>
 </html>
