--- a/themes/wilks/layouts/articles/list.html
+++ b/themes/wilks/layouts/articles/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<section class="section section--articles">
+<section class="section section--articles animate fadein">
   <h1 class="section__heading">All {{ .Title }}</h1>
   {{ if .Params.intro }}
   <p class="section__intro">{{ .Params.intro }}</p>
