--- a/themes/wilks/layouts/partials/other-articles.html
+++ b/themes/wilks/layouts/partials/other-articles.html
@@ -1,4 +1,4 @@
-<section class="section section--articles">
+<section class="section section--articles section--latest animate fadein">
 	<h2 class="section__heading">Other Articles <a href="/articles">View all</a></h2>
 	<ol class="post-list">
 		{{ range ( first 3 ( where .Site.RegularPages "Section" "articles" ) ) }}
