--- a/themes/wilks/layouts/work/single.html
+++ b/themes/wilks/layouts/work/single.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<article>
+<article class="animate fadein">
   <header class="banner">
     <h1 class="banner__title">{{ .Title }}</h1>
     {{ if .Params.intro }}
