Update intro text

--- a/themes/wilks/layouts/index.html
+++ b/themes/wilks/layouts/index.html
@@ -2,9 +2,9 @@
 
 {{ if .IsHome }}
 <div class="banner banner--front animate">
-  <h1 class="banner__title">I am a <span>CSS monkey</span> front end developer &amp; <span>gluton for punishment</span> drupal specialist based in sunny Manchester.</h1>
+  <h1 class="banner__title">I am a front end developer &amp; Drupal specialist based in sunny Manchester.</h1>
   <p class="banner__intro">I've been tinkering with all things web since 2005.</p>
-  <a class="button" href="/about">About me</a>
+  <a class="button" href="/about">More about me</a>
 </div>
 {{ end }}
 
